fix(productservice): resolve all 25 SonarQube bugs, vulnerabilities, and code smells